<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_apariencia"
        android:textSize="18sp"
        android:paddingBottom="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioClaro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claro"/>

        <RadioButton
            android:id="@+id/radioOscuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oscuro"/>

        <RadioButton
            android:id="@+id/radioAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatico"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idioma"
        android:textSize="18sp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>