<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnCambiarFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_foto"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nueva_contraseña"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnCambiarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contraseña"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

</LinearLayout>