<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RecyclerView para mostrar la lista de libros -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLibros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layoutBotones"
        android:padding="8dp"/>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnTest"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/agregar_libro"/>

        <Button
            android:id="@+id/btnAjustes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ajustes"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnToggleFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_ocultar_leidos"
        android:layout_above="@id/layoutBotones"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"/>
</RelativeLayout>